# MediaManager

./: .gitignore  .gitmodules  CMakeLists.txt  InstallerInfo.cmake  License.txt  Project.cmake  README.md  VersionInfo.cmake
App/: CMakeLists.txt  application.rc  include.cmake  main.cpp
Core/: CMakeLists.txt  DirModel.cpp  DirModel.h  DirNodeItem.cpp  DirNodeItem.h  LanguageInfo.cpp  LanguageInfo.h  MakeMKVModel.cpp  MakeMKVModel.h  MergeSRTModel.cpp  MergeSRTModel.h  NetworkReply.cpp  NetworkReply.h  PatternInfo.cpp  PatternInfo.h  Preferences.cpp  Preferences.h  SearchResult.cpp  SearchResult.h  SearchTMDB.cpp  SearchTMDB.h  SearchTMDBInfo.cpp  SearchTMDBInfo.h  TagsModel.cpp  TagsModel.h  TransformModel.cpp  TransformModel.h  TransformResult.cpp  TransformResult.h  core.qrc  include.cmake
Core/resources/: BlankTags.xml
FileRenamerApp/: CMakeLists.txt  application.rc  main.cpp
FileRenamerLib/: CMakeLists.txt  DirModel.cpp  DirModel.h  NetworkReply.cpp  NetworkReply.h  Preferences.cpp  Preferences.h  SearchResult.cpp  SearchResult.h  SearchTMDB.cpp  SearchTMDB.h  SearchTMDBInfo.cpp  SearchTMDBInfo.h  include.cmake
FileRenamerUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Preferences.cpp  Preferences.h  SelectTMDB.cpp  SelectTMDB.h  SelectTMDB.ui  TransformConfirm.cpp  TransformConfirm.h  include.cmake
MainWindow/: DirModel.cpp  DirModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkReply.cpp  NetworkReply.h  Preferences.cpp  Preferences.h  Preferences.ui  SearchResult.cpp  SearchResult.h  SearchTMDB.cpp  SearchTMDB.h  SearchTMDBInfo.cpp  SearchTMDBInfo.h  SelectTMDB.cpp  SelectTMDB.h  SelectTMDB.ui  TitleInfo.cpp  TitleInfo.h  application.qrc  include.cmake
Models/: CMakeLists.txt  DirModel.cpp  DirModel.h  DirNodeItem.cpp  DirNodeItem.h  GenerateBIFModel.cpp  GenerateBIFModel.h  MakeH265MKVModel.cpp  MakeH265MKVModel.h  MakeMKVModel.cpp  MakeMKVModel.h  MediaNamingModel.cpp  MediaNamingModel.h  MergeSRTModel.cpp  MergeSRTModel.h  TagsModel.cpp  TagsModel.h  TranscodeModel.cpp  TranscodeModel.h  TransformModel.cpp  TransformModel.h  ValidateMKVModel.cpp  ValidateMKVModel.h  include.cmake
Preferences/Core/: CMakeLists.txt  DefaultPreferences.cpp  GenerateDefaults.cpp  Preferences.cpp  Preferences.h  TranscodeArgs.cpp  TranscodeNeeded.cpp  TranscodeNeeded.h  include.cmake
Preferences/UI/: BIFGeneration.cpp  BIFGeneration.h  BIFGeneration.ui  BasePrefPage.cpp  BasePrefPage.h  BitrateExperiment.cpp  BitrateExperiment.h  BitrateExperiment.ui  CMakeLists.txt  ExtendedInfo.cpp  ExtendedInfo.h  ExtendedInfo.ui  Extensions.cpp  Extensions.h  Extensions.ui  ExternalTools.cpp  ExternalTools.h  ExternalTools.ui  FFMpegInfo.cpp  FFMpegInfo.h  FFMpegInfo.ui  GeneralSettings.cpp  GeneralSettings.h  GeneralSettings.ui  IgnoredPaths.cpp  IgnoredPaths.h  IgnoredPaths.ui  KnownAbbreviations.cpp  KnownAbbreviations.h  KnownAbbreviations.ui  KnownHyphenated.cpp  KnownHyphenated.h  KnownHyphenated.ui  MakeMKVAudioSettings.cpp  MakeMKVAudioSettings.h  MakeMKVAudioSettings.ui  MakeMKVGeneralSettings.cpp  MakeMKVGeneralSettings.h  MakeMKVGeneralSettings.ui  MakeMKVSettings.cpp  (+58 more)
UI/: BIFViewerPage.cpp  BIFViewerPage.h  BIFViewerPage.ui  BasePage.cpp  BasePage.h  BasePage.ui  CMakeLists.txt  GenerateBIFPage.cpp  GenerateBIFPage.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MakeH265MKVPage.cpp  MakeH265MKVPage.h  MakeMKV.cpp  MakeMKV.ui  MakeMKVPage.cpp  MakeMKVPage.h  MakeMKVPage.ui  MediaNamingPage.cpp  MediaNamingPage.h  MergeSRTPage.cpp  MergeSRTPage.h  MergeSRTPage.ui  Preferences.cpp  Preferences.h  Preferences.ui  ProcessConfirm.cpp  ProcessConfirm.h  ProcessConfirm.ui  SelectTMDB.cpp  SelectTMDB.h  SelectTMDB.ui  SetTags.cpp  SetTags.h  SetTags.ui  TagsPage.cpp  TagsPage.h  TranscodePage.cpp  TranscodePage.h  (+12 more)
UI/Preferences/: BasePrefPage.h  ExtendedInfo.cpp  ExtendedInfo.h  Extensions.cpp  Extensions.h  ExternalTools.cpp  ExternalTools.h  ExternalTools.ui  IgnoredPaths.cpp  IgnoredPaths.h  KnownAbbreviations.cpp  KnownAbbreviations.h  MovieSettings.h  MovieSettings.ui  PathsToDelete.cpp  PathsToDelete.h  PathsToDelete.ui  Preferences.cpp  Preferences.h  Preferences.ui  RemoveFromPaths.cpp  RemoveFromPaths.h  RemoveFromPaths.ui  SkippedPaths.h  SkippedPaths.ui  TVShowSettings.h  TVShowSettings.ui  TagAnalysisSettings.cpp  TagAnalysisSettings.h  TagAnalysisSettings.ui  TransformationSettings.cpp  TransformationSettings.h  TransformationSettings.ui  include.cmake
UI/resources/: application.qrc
main/: CMakeLists.txt  main.cpp
mkvalidator-0.6.0/: CMakeLists.txt
mkvalidator-0.6.0/corec/: CMakeLists.txt
mkvalidator-0.6.0/corec/corec/: CMakeLists.txt  corec_config.h.in
mkvalidator-0.6.0/corec/corec/helpers/: CMakeLists.txt
mkvalidator-0.6.0/corec/corec/helpers/parser/: parser.h  parser2.c
mkvalidator-0.6.0/corec/corec/helpers/zlib/: CMakeLists.txt
mkvalidator-0.6.0/corec/tests/: CMakeLists.txt
mkvalidator-0.6.0/corec/tools/branch/: CMakeLists.txt
mkvalidator-0.6.0/libebml2/: CMakeLists.txt  ebml_config.h.in
mkvalidator-0.6.0/libebml2/legacy/: ebml2_legacy_project.h.in
mkvalidator-0.6.0/libmatroska2/: CMakeLists.txt  matroska_config.h.in
mkvalidator-0.6.0/libmatroska2/bzip2/: CMakeLists.txt
mkvalidator-0.6.0/libmatroska2/minilzo/: CMakeLists.txt
mkvalidator-0.6.0/libmatroska2/tremor/: CMakeLists.txt
mkvalidator-0.6.0/mkvalidator/: CMakeLists.txt  CMakeLists.txt.in  mkvalidator.c  mkvalidator_project.h.in  src.br.in
scripts/: makemkv  mergesrt
